# formol

./: README.adoc  eepp-plain-text-format.adoc  formol.py  pyproject.toml
tests/: conftest.py  test-admon-box-rendered.ft  test-admon-box.ft  test-blockquote-rendered.ft  test-blockquote.ft  test-empty-lines.ft  test-h1-rendered.ft  test-h1.ft  test-h2-rendered.ft  test-h2.ft  test-hr-rendered.ft  test-hr.ft  test-ol-compact-rendered.ft  test-ol-compact.ft  test-ol-nested-rendered.ft  test-ol-nested.ft  test-ol-simple-rendered.ft  test-ol-simple.ft  test-p-lit-bracket-before.ft  test-p-lit-break.ft  test-p-lit-something-after.ft  test-p-long-line.ft  test-p-long-lines.ft  test-p-multi.ft  test-p-runt.ft  test-p-short-line.ft  test-p-short-lines.ft  test-pre-rendered.ft  test-pre.ft  test-ul-compact-rendered.ft  test-ul-compact.ft  test-ul-nested-rendered.ft  test-ul-nested.ft  test-ul-ol-nested-rendered.ft  test-ul-ol-nested.ft  test-ul-simple-rendered.ft  test-ul-simple.ft  test-verbatim-box.ft  test-verbatim-ref.ft
